fixing description spacing on front page

--- a/assets/css/front-page.css
+++ b/assets/css/front-page.css
@@ -392,10 +392,7 @@
 /* .production-description, */
 .community-description,
 .support-description {
-  margin-block: 2rem;
-}
-.support-description {
-  margin-inline: auto;
+  margin-bottom: 1rem;
 }
 
 .shop-items-grid-wrapper,
